--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="contenido-seccion">
         <h2>Un poco acerca de mi...</h2>
         <p>
-          <span>¿Que tal? Me llamo Diego.</span> Siempre digo que poseo una
+          <span>¿Que tal? Me llamo Diego.</span> Poseo una
           personalidad dinámica y decidida, me adopto fácil a todos los
           problemas que se me presenten. Actitud de líder innata, creatividad en
           cada idea y decidido en mis objetivos, entusiasmo por aprender cada
