--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           problemas que se me presenten. Actitud de líder innata, creatividad en
           cada idea y decidido en mis objetivos, entusiasmo por aprender cada
           día más algo nueva. Actitud extrovertida en grupos de trabajo y un
-          reto personal de ser el mejor siempre. 😼👊
+          reto personal de ser el mejor siempre.
         </p>
 
         <div class="fila">
@@ -272,10 +272,8 @@
               >
               <span class="fecha">Actualmente</span>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. In
-                animi at voluptatem doloribus voluptates voluptas enim provident
-                obcaecati, pariatur magni, eligendi rerum rem quasi maxime quia
-                cumque neque ea! Nobis?
+                Programación orientada a objetos (Java). Manejo y control de
+                Base de Datos. Lenguajes de programación Web (Javascript, PHP)
               </p>
               <div class="conectori">
                 <div class="circuloi"></div>
@@ -286,10 +284,8 @@
               <span class="casa">KeepCoding Tech School - Madrid, España</span>
               <span class="fecha">2022-2023</span>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. In
-                animi at voluptatem doloribus voluptates voluptas enim provident
-                obcaecati, pariatur magni, eligendi rerum rem quasi maxime quia
-                cumque neque ea! Nobis?
+              Desarrollo FrontEnd y Backend con JavaScript y tecnologías como Node JS, React. 
+              Configuración y despliegue de servidores Web. Manejo de Bases de Datos SQL
               </p>
               <a
                 href="https://drive.google.com/file/d/1yxeB9i40z7ckur27JgLyzCn97UtT7oE5/view?usp=sharing"
@@ -310,10 +306,8 @@
               >
               <span class="fecha">2019-2022</span>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. In
-                animi at voluptatem doloribus voluptates voluptas enim provident
-                obcaecati, pariatur magni, eligendi rerum rem quasi maxime quia
-                cumque neque ea! Nobis?
+               Introducción a programación en C++ y Java. Soporte y Mantenimiento Técnico.
+               Despliegue de aplicaciones Web con PHP y Javascript. 
               </p>
               <div class="conectori">
                 <div class="circuloi"></div>
