--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               <span class="fecha">Actualmente</span>
               <p>
                 Programación orientada a objetos (Java). Manejo y control de
-                Base de Datos. Lenguajes de programación Web (Javascript, PHP)
+                Base de Datos. Lenguajes de programación web (Javascript, PHP)
               </p>
               <div class="conectori">
                 <div class="circuloi"></div>
@@ -284,8 +284,8 @@
               <span class="casa">KeepCoding Tech School - Madrid, España</span>
               <span class="fecha">2022-2023</span>
               <p>
-              Desarrollo FrontEnd y Backend con JavaScript y tecnologías como Node JS, React. 
-              Configuración y despliegue de servidores Web. Manejo de Bases de Datos SQL
+              Desarrollo FrontEnd y BackEnd con Javascript y tecnologías como Node JS, React. 
+              Configuración y despliegue de servidores web. Manejo de Bases de Datos SQL
               </p>
               <a
                 href="https://drive.google.com/file/d/1yxeB9i40z7ckur27JgLyzCn97UtT7oE5/view?usp=sharing"
@@ -307,7 +307,7 @@
               <span class="fecha">2019-2022</span>
               <p>
                Introducción a programación en C++ y Java. Soporte y Mantenimiento Técnico.
-               Despliegue de aplicaciones Web con PHP y Javascript. 
+               Despliegue de aplicaciones web con PHP y Javascript. 
               </p>
               <div class="conectori">
                 <div class="circuloi"></div>
@@ -325,10 +325,7 @@
               >
               <span class="fecha">2023 | Proyecto Virtual</span>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. In
-                animi at voluptatem doloribus voluptates voluptas enim provident
-                obcaecati, pariatur magni, eligendi rerum rem quasi maxime quia
-                cumque neque ea! Nobis?
+               Sitio Web de compra/venta de articulos usados.
               </p>
               <div class="conectord">
                 <div class="circulod"></div>
@@ -341,10 +338,8 @@
               >
               <span class="fecha">2021- 2022 | Quito, Ecuador</span>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. In
-                animi at voluptatem doloribus voluptates voluptas enim provident
-                obcaecati, pariatur magni, eligendi rerum rem quasi maxime quia
-                cumque neque ea! Nobis?
+               Red Social enfocada a un público juvenil con posibilidad de 
+              compartir Fotos, Memes, Audios, Opiniones, y demás contenido.
               </p>
               <div class="conectord">
                 <div class="circulod"></div>
