Update index.html(adding Meesh url)

--- a/index.html
+++ b/index.html
@@ -362,12 +362,18 @@
 
         <div class="galeria">
           <!--Subdivicion de Proyectos-->
-          <div class="proyecto">
-            <img src="img/meesh.png" alt="meesh" />
-            <div class="overlay">
-              <h3>Meesh! | Expresate tal como eres</h3>
-              <p>Red Social</p>
-            </div>
+           <div class="proyecto">
+            <a
+              href="http://meesh.epizy.com/modelo/login.php"
+              target="_blank"
+              style="text-decoration: none; color: white"
+            >
+              <img src="img/meesh.png" alt="meesh" />
+              <div class="overlay">
+                <h3>Meesh! | Expresate tal como eres</h3>
+                <p>Red Social</p>
+              </div>
+            </a>
           </div>
           <div class="proyecto">
             <img src="img/whataduck.png" alt="whataduck" />
